--- a/ToDoApp/package.json
+++ b/ToDoApp/package.json
@@ -55,6 +55,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:8080" ,
   "browserslist": {
     "production": [
       ">0.2%",
